[gd_scene load_steps=2 format=3 uid="uid://cv85wapmyimam"]

[ext_resource type="Script" uid="uid://dhjpxgbqsrw2m" path="res://Scripts/changeGunNameMenu.gd" id="1_pijav"]

[node name="changeGunNameUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pijav")

[node name="gunNameLEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -433.0
offset_top = -83.0
offset_right = 433.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 116
placeholder_text = "GUN NAME"
alignment = 1
max_length = 20
expand_to_text_length = true
emoji_menu_enabled = false
clear_button_enabled = true

[node name="changeNameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -263.0
offset_right = 430.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "change name"

[node name="cancelButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -430.0
offset_top = -263.0
offset_right = -22.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 71
text = "cancel"

[connection signal="editing_toggled" from="gunNameLEdit" to="." method="_on_gun_name_l_edit_editing_toggled"]
[connection signal="pressed" from="changeNameButton" to="." method="changeName"]
[connection signal="pressed" from="cancelButton" to="." method="continuegame"]
